Visualizar citas OK prev CRUD servicios

--- a/src/scss/base/_tipografia.scss
+++ b/src/scss/base/_tipografia.scss
@@ -24,7 +24,7 @@ p {
 
 .nombre-pagina {
     text-align: center;
-    margin: 5rem 0;
+    margin: 2rem 0 5rem 0;
     font-family: v.$bold;
 }
 .descripcion-pagina {
