--- a/src/scss/layout/_admin.scss
+++ b/src/scss/layout/_admin.scss
@@ -34,3 +34,17 @@
     text-align: center;
     padding: 2rem;
 }
+
+.servicios {
+    @extend .citas;
+
+    .acciones {
+        margin: 0;
+    }
+    .boton {
+        margin: 0;
+    }
+    .boton-eliminar {
+        margin: 0;
+    }
+}
